--- a/src/layouts/IndexLayout/css/index.less
+++ b/src/layouts/IndexLayout/css/index.less
@@ -16,7 +16,7 @@
         color: #c0c4cc;
         transition-duration: 0.1s;
         z-index: 10;
-        
+
         .indexlayout-left-logo {
           width: 100%;
           height: @headerHeight;
@@ -41,25 +41,25 @@
             vertical-align: middle;
           }
         }
-      
-      
+
+
         .indexlayout-left-menu {
           flex: 1;
           overflow: hidden auto;
           // height: calc(100vh);
-      
+
           .left-scrollbar {
             width: 100%;
             height: 100%;
           }
         }
-      
+
         &.narrow {
           width: @menu-collapsed-width;
         }
-      
+
         .scrollbar();
-      
+
     }
 
     #indexlayout-right {
@@ -91,7 +91,7 @@
                   color: @menu-dark-highlight-color;
                 }
               }
-          
+
               .indexlayout-top-menu {
                 height: @headerHeight;
                 line-height: @headerHeight;
@@ -114,12 +114,12 @@
                     border-bottom-color: @primary-color;
                   }
                 }
-          
+
                 .breadcrumb {
                   line-height: @headerHeight;
                 }
               }
-          
+
               .indexlayout-top-menu-right {
                 width: 150px;
                 .indexlayout-top-message {
@@ -141,9 +141,9 @@
                   padding-left: 10px;
                 }
               }
-          
+
               .scrollbar();
-          
+
             }
             .indexlayout-right-top-bot {
               display: flex;
@@ -179,13 +179,13 @@
                    /*  background-color: #FFFFFF; */
                     text-align: center;
                     font-size: 12px;
-                    cursor: pointer;  
+                    cursor: pointer;
                     .icon-box {
                         display: block;
                         width: (@headerTabNavHeight - 10px);
                         height: (@headerTabNavHeight - 8px);
                         line-height: (@headerTabNavHeight - 8px);
-                    }      
+                    }
                     .icon {
                         color: rgba(0,0,0,.45);
                     }
@@ -199,12 +199,12 @@
                     box-sizing: content-box;
                     padding-right: 10px;
                     line-height: normal;
-                } 
+                }
                 .middle {
                     flex: 1;
                     overflow: hidden;
                     .tab {
-                        position: relative;           
+                        position: relative;
                         float: left;
                         list-style: none;
                         overflow: visible;
@@ -237,7 +237,7 @@
                                 &:hover {
                                     color: rgba(0,0,0,.75);
                                 }
-            
+
                             }
                             .icon-pre {
                                 display: none;
@@ -248,18 +248,18 @@
                                     color: rgba(@primary-color, 1);
                                 }
                             }
-                        }            
+                        }
                         .active {
                             color: @primary-color;
                             background:#FFFFFF;
                             border-color:#FFFFFF;
-                            .icon-pre { 
+                            .icon-pre {
                                 display: inline-block;
                             }
                         }
                     }
                 }
-            
+
             }
 
 
@@ -286,11 +286,11 @@
                   }
                 }
               }
-          
+
               &.tabNavEnable {
                 height: (@headerHeight);
               }
-          
+
             }
         }
 
@@ -302,6 +302,12 @@
                 position: relative;
             }
 
+            .indexlayout-main-footer {
+              margin: 24px;
+              width: 100%;
+              position: absolute;
+              bottom: 0;
+            }
         }
 
 
