--- a/src/assets/css/global.less
+++ b/src/assets/css/global.less
@@ -1,7 +1,7 @@
-@import 'ant-design-vue/dist/antd.less';
-@import './antd-variables.less';
-@import './variables.less';
-@import './mixin.less';
+@import "ant-design-vue/dist/antd.less";
+@import "./antd-variables.less";
+@import "./variables.less";
+@import "./mixin.less";
 
 #nprogress .bar {
     background: @primary-color !important;
